# projection

./: CMakeLists.txt  accumulate.cxx  binary.cxx  check.cxx  itkBinaryProjectionImageFilter.h  itkMaximumProjectionImageFilter.h  itkMeanProjectionImageFilter.h  itkMedianProjectionImageFilter.h  itkMinimumProjectionImageFilter.h  itkProjectionImageFilter.h  itkProjectionImageFilter.txx  itkSigmaProjectionImageFilter.h  itkSumProjectionImageFilter.h  itkUpperDimensionImageFilter.h  itkUpperDimensionImageFilter.txx  max.cxx  maxaxe.cxx  maxdim.cxx  maxdim2D.cxx  mean.cxx  median.cxx  min.cxx  perf.cxx  perf_dim.cxx  sigma.cxx  sum.cxx  unproject.cxx
Wrapping/: CMakeLists.txt  wrap_itkBinaryProjectionImageFilter.cmake  wrap_itkMaximumProjectionImageFilter.cmake  wrap_itkMeanProjectionImageFilter.cmake  wrap_itkMedianProjectionImageFilter.cmake  wrap_itkMinimumProjectionImageFilter.cmake  wrap_itkSigmaProjectionImageFilter.cmake  wrap_itkSumProjectionImageFilter.cmake  wrap_itkUpperDimensionImageFilter.cmake
article/: Article.tex  Makefile
images/: maximum.tif  maximum0.tif  minimum.tif  results  results.gnuplot
